--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
    Welcome to the AI poem generator!
    
    <footer>
-    This AI project was coded by <a href="" Qudrah Shonibare
+    This AI project was coded by 
+    <a href="https://github.com/AfolakeQD/" target="_blank">Qudrah Shonibare</a> and is
+    <a href="https://github.com/AfolakeQD/Poem-generator/" target="_blank">open sourced on GitHub</a> and is
+    <a href="https://vercel.com/afolakeqds-projects/poem-generator" target="_blank"></a>
    </footer>
 </body>
 </html>
