Added basic html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css" />
     <title>AI Poem Generator</title>
 </head>
 <body>
-   Welcome to the AI poem generator!
+  <header>Welcome to the AI poem generator!</header> 
    
-   <footer>
+  <main>
+    <form>
+   <input
+   type="text"
+          placeholder="Enter the topic of the poem"
+          autofocus
+          required
+          autocomplete="off"
+   />
+    <input type="submit" />
+   </form>
+God is king, but life is a trend
+</br>
+to take the bitter and the sweet
+</br>
+adrenaline battles on to the end.
+</br>
+Be victorious even in defeat.
+  </main>
+   
+  
+  <footer>
     This AI project was coded by 
     <a href="https://github.com/AfolakeQD/" target="_blank">Qudrah Shonibare</a> and is
     <a href="https://github.com/AfolakeQD/Poem-generator/" target="_blank">open sourced on GitHub</a> and is
-    <a href="https://vercel.com/afolakeqds-projects/poem-generator" target="_blank"></a>
+    <a href="https://vercel.com/afolakeqds-projects/poem-generator" target="_blank">hosted on vercel</a>
    </footer>
+   <script src="src/script.js"></script>
 </body>
 </html>
