--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>AI Poem Generator</title>
 </head>
@@ -13,7 +14,7 @@
   </header> 
    
   <main>
-    <form>
+    <form id="poem-generator-form">
    <input
    type="text"
           placeholder="Enter the topic of the poem"
@@ -24,15 +25,7 @@
    />
     <input type="submit" class="submit-botton" />
    </form>
-   <div class="poem">
-God is king, but life is a trend
-</br>
-to take the bitter and the sweet
-</br>
-adrenaline battles on to the end.
-</br>
-Be victorious even in defeat.
-</div>
+   <div class="poem" id="poem">
   </main>
    
   
