Added better user experience

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
    />
     <input type="submit" class="submit-botton" />
    </form>
+    <div class="hint">i.e: Life, Love or Contentment</div>
   </div>
-   <div class="poem" id="poem">
+   <div class="poem hidden" id="poem"></div>
   </main>
    
   
